@@ -170,7 +170,7 @@ public class VerticalWindChart extends Composite implements HasWidgets {
                                     @Override
                                     public String format(AxisLabelsData axisLabelsData) {
                                         long value = axisLabelsData.getValueAsLong() % 360;
-                                        return new Long(value < 0 ? value + 360 : value).toString();
+                                        return Long.valueOf(value < 0 ? value + 360 : value).toString();
                                     }
                                 }));
     }
